fix: use correct value for overflow

--- a/src/assets/css/contributors.scss
+++ b/src/assets/css/contributors.scss
@@ -75,7 +75,7 @@
   }
   @include media.md-rem {
     padding: 0;
-    overflow: inherit;
+    overflow: visible;
   }
   .heart {
     position: relative;
